--- a/server/public/main.css
+++ b/server/public/main.css
@@ -1,3 +1,31 @@
 body {
-  background-color: blue;
+margin: 0px;
+}
+
+.navbar {
+  width: 100%;
+  height: 50px;
+  border: 1px solid black;
+}
+
+.log {
+  margin: 10px 0 10px 15px;
+  border: 1px solid black;
+  width: 30px;
+  height: 20px;
+  background-color: orange;
+}
+
+.toggle {
+  margin: 10px auto;
+  border: 1px solid black;
+  width: 30px;
+  height: 20px;
+  background-color: orange;
+}
+
+.avatar {
+  width: 30px;
+  height: 30px;
+  background-color: orange;
 }
