--- a/server/public/main.css
+++ b/server/public/main.css
@@ -7,6 +7,16 @@ body {
   border: 1px solid black;
 }
 
+.tahaview {
+  width: 100%;
+  height: 10em;
+}
+
+img {
+  max-height: 100%;
+  width: 100%;
+}
+
 .log {
   margin: 10px auto;
   width: 40px;
