--- a/server/public/main.css
+++ b/server/public/main.css
@@ -12,9 +12,45 @@ body {
   height: 10em;
 }
 
-img {
+.cloudview {
+  background-color: skyblue
+}
+
+.cloudlayer {
+  min-height: 10em;
+}
+
+.cloud {
+  position: relative;
+  text-align: center;
+  width: 14em;
+  height: 8em;
+}
+
+.cloud img {
+  width: 100%;
+  height: 100%;
+}
+
+.cloudtext {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.cloudtext div {
+  display: inline-block;
+}
+
+img.barplaceholder{
   max-height: 100%;
   width: 100%;
+}
+
+img.progressplaceholder{
+  max-height: 100%;
+  max-width: 100%;
 }
 
 .log {
