--- a/server/public/main.css
+++ b/server/public/main.css
@@ -5,6 +5,7 @@ body {
 .navbar {
   height: 56px;
   border: 1px solid black;
+  background-color: rgb(49, 40, 104)
 }
 
 .log {
@@ -14,7 +15,7 @@ body {
   height: 20px;
   font-size: .8em;
   border-radius: 0 50% 50% 0;
-  background-color: orange;
+  background-color: #84c7c1;
 }
 
 .toggle {
@@ -26,6 +27,9 @@ body {
   margin: 8px auto;
   width: 27px;
   height: 27px;
-  border-radius: 50%;
-  background-color: orange;
 }
+
+.avatarImg {
+  border-radius: 50%;
+}
+
