--- a/server/public/main.css
+++ b/server/public/main.css
@@ -47,9 +47,28 @@ body {
   height: 18%;
 }
 
+
 .cloud img {
   width: 100%;
   height: 100%;
+}
+
+.newDreamCont {
+  position: relative;
+  text-align: center;
+}
+
+.newDream {
+  width: 35%;
+  height: 18%;
+}
+
+.newDreamTxt {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  font-size: .8em;
+  transform: translate(-50%, -50%);
 }
 
 .cloudtext {
