--- a/server/public/main.css
+++ b/server/public/main.css
@@ -16,14 +16,15 @@ body {
   top: 0;
   margin: 0 !important;
   width: 100%;
-  height: 56px;
+  height: 5%;
   border: 1px solid black;
   background-color: rgb(49, 40, 104)
 }
 
 
 .dashCont {
-  height: 100%;
+  height: 95%;
+  background: url('/images/dashBoard.png')
 }
 .totProgress {
   height: 100%;
@@ -40,11 +41,11 @@ body {
   height: 20%;
   width: 100%;
   bottom: 0;
-  position: absolute;
+  position: fixed;
 }
 
 .cloudView {
-  background-color: skyblue;
+  /* background-color: skyblue; */
   height: 80%;
 }
 
