--- a/server/public/main.css
+++ b/server/public/main.css
@@ -23,11 +23,13 @@ body {
 
 
 .dashCont {
-  height: 95%;
+  position: absolute;
+  height: 91.1%;
   background: url('/images/dashBoard.png')
 }
+
 .totProgress {
-  height: 100%;
+  height: 95%;
   width: 25%;
 }
 
@@ -38,6 +40,7 @@ body {
 
 .botBar {
   margin: 0 !important;
+  background-image: none;
   height: 20%;
   width: 100%;
   bottom: 0;
