--- a/server/public/main.css
+++ b/server/public/main.css
@@ -223,10 +223,23 @@ img.progressplaceholder{
 }
 
 .circularProgressbar {
+  position: relative;
+  margin: auto;
+  transform : rotate(-90deg);
   height: 50%;
   width: 40%;
   margin-bottom: 2.5rem;
   margin-left: 1.5rem;
+}
+
+.circularProgressbar-percentage, .circularProgressbar-text {
+  position:absolute;
+  width: 100%;
+  top: 50%;
+  left:50%;
+  transform: translate (-50%, -50%) rotate(-90deg);
+  text-align:center;
+  padding: 0px 60px;
 }
 
 .rechartBar {
