--- a/server/public/main.css
+++ b/server/public/main.css
@@ -1,14 +1,7 @@
+/* BODY,NAVBAR & HEADINGS */
+
 body {
   margin: 0;
-}
-
-#container {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  padding: 10px;
-  width: 700px;
-  height: 700px;
 }
 
 .navbar {
@@ -32,11 +25,22 @@ body {
   width: 25%;
 }
 
+/* BALANCE */
+#container {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 10px;
+  width: 700px;
+  height: 700px;
+}
+
 .balance {
   width: 75%;
   height: 100%;
 }
 
+/* CLOUD VIEW */
 .botBar {
   margin: 0 !important;
   background-image: none;
@@ -69,6 +73,8 @@ body {
   height: 100%;
 }
 
+
+/* NEW DREAMS */
 .newDreamCont {
   position: relative;
   text-align: center;
@@ -99,6 +105,8 @@ body {
   display: inline-block;
 }
 
+
+/* PLACEHOLDERS */
 img.barplaceholder{
   max-height: 100%;
   width: 100%;
@@ -124,6 +132,7 @@ img.progressplaceholder{
   width: 40px;
 }
 
+/* AVATAR PAGE */
 .avatar {
   margin: 8px auto;
   width: 27px;
@@ -134,6 +143,12 @@ img.progressplaceholder{
   border-radius: 50%;
 }
 
+.whanauAvatarDiv {
+  height: 50px;
+  margin-top: 5px;
+}
+
+/* ADD NEW DREAM BUTTON */
 .newDreamBtn {
   width: 100%;
   background-color: rgb(23, 92, 116);
@@ -141,9 +156,9 @@ img.progressplaceholder{
   text-align: center;
 }
 
+/* INVITES */
 .inviteCont {
   width: 100%;
-
 }
 
 .invites {
@@ -161,11 +176,6 @@ img.progressplaceholder{
   position: fixed;
 }
 
-.whanauAvatarDiv {
-  height: 50px;
-  margin-top: 5px;
-}
-
 .radio {
   opacity: 1 !important;
   position: relative !important;
@@ -177,6 +187,7 @@ form label{
   display: none;
 }
 
+/* REGISTER PAGE */
 .hero-body fieldset{
   border: none;
 }
@@ -202,6 +213,8 @@ input{
   text-align: center;
 }
 
+
+/**APP GRADIENT **/
 #app{
   background: -moz-linear-gradient(top, #3b1f59 0%, #c98963 100%); /* FF3.6-15 */
   background: -webkit-linear-gradient(top, #3b1f59 0%,#c98963 100%); /* Chrome10-25,Safari5.1-6 */
