accordion tabs done with springload component

--- a/client/sass/bulma_main.scss
+++ b/client/sass/bulma_main.scss
@@ -12,3 +12,5 @@ $dark: #3F3F3F;
 
 @import '~bulma/bulma.sass';
 @import '~bulma-divider';
+
+@import '~react-accessible-accordion/dist/fancy-example';
