--- a/server/public/main.css
+++ b/server/public/main.css
@@ -306,6 +306,7 @@ input{
   font-weight: bold;
   width: 100px;
   margin: 10px 4px 10px 4px;
+  text-align: center;
 }
 
 .buttonGroup{
@@ -324,4 +325,39 @@ input{
   background: -moz-linear-gradient(top, #3b1f59 0%, #c98963 100%); /* FF3.6-15 */
   background: -webkit-linear-gradient(top, #3b1f59 0%,#c98963 100%); /* Chrome10-25,Safari5.1-6 */
   background: linear-gradient(to bottom, #3b1f59 0%,#c98963 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+}
+
+
+
+/** Modal **/
+.modal-background{
+  background-color: rgba(255, 255, 255, 0.86);
+}
+
+.modal-content{
+  background-color:#fff;
+  border-radius: 10px;
+}
+
+.modal-content fieldset{
+  border: none;
+}
+
+.modal-content .button{
+  display: block;
+  margin: 10px auto 10px auto;
+}
+
+.modal-content input{
+  border : black solid 1px; 
+}
+
+.modal-content .modal-text{
+  padding: 1em;
+}
+
+.modal-content .title{
+  margin : 10px auto 10px auto;
+  text-align: center;
+  font-size: 1.5em;
 }
