--- a/server/public/main.css
+++ b/server/public/main.css
@@ -3,11 +3,6 @@ body {
   margin: 0;
 }
 
-html, body {
-  width: 100%;
-  height: 100%;
-}
-
 /* h1 {
   font-size: 3rem;
   color: #fff;
@@ -42,29 +37,17 @@ h4 {
 }
 
 /* BALANCE */
-#container {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  padding: 10px;
-  width: 700px;
-  height: 700px;
-}
-
 .balance {
-  width: 75%;
-  height: 100%;
-  min-height: 5em;
-  max-height: 10em;
+  width: 100%;
+  min-height: 100px;
 }
 
 .bargraph-section {
   width: 100%;
-  min-height: 10%;
-  max-height: 20%;
+  padding: 10px 10px 10px 10px ;
+  margin-top: auto;
 }
 
-/* CLOUD VIEW */
 .botBar {
   margin: 0 !important;
   background-image: none;
@@ -72,6 +55,29 @@ h4 {
   width: 100%;
   bottom: 0;
   position: fixed;
+}
+/* BALANCE CONTAINER */
+#container {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 10px;
+  width: 700px;
+  height: 700px;
+  background-color: #fff;
+}
+
+
+/* TOTAL PROGRESS */
+.circularProgressbar {
+  position: relative;
+  margin: auto;
+  height: 50%;
+  width: 40%;
+  margin-bottom: 2.5rem;
+  margin-left: 1.5rem;
+  text-align:center;
+
 }
 
 /* REGISTER PAGE */
@@ -88,7 +94,8 @@ h4 {
   background: url('/images/dashBoard.png')
 }
 
-/* CLOUD */
+/* CLOUD VIEW */
+
 .cloudView {
   height: 71.1%;
   margin-bottom: 0 !important;
@@ -98,6 +105,9 @@ h4 {
   min-height: 6em;
   margin-bottom: 0 !important;
 }
+
+
+/* CLOUD */
 
 .cloud {
   position: relative;
@@ -111,6 +121,18 @@ h4 {
   height: 100%;
 }
 
+/* CLOUD TEXT */
+.cloudtext {
+  position: absolute;
+  font-size: .8em;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.cloudtext div {
+  display: inline-block;
+}
 /* NEW DREAMS */
 .newDreamCont {
   position: relative;
@@ -130,6 +152,7 @@ h4 {
   transform: translate(-50%, -50%);
 }
 
+/* ADD NEW DREAM BUTTON */
 .newDreamBtn {
   width: 100%;
   background-color: rgb(23, 92, 116);
@@ -137,18 +160,6 @@ h4 {
   text-align: center;
 }
 
-/* CLOUD TEXT */
-.cloudtext {
-  position: absolute;
-  font-size: .8em;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.cloudtext div {
-  display: inline-block;
-}
 
 /* IMAGES */
 img.barplaceholder{
@@ -209,13 +220,6 @@ label {
   margin-top: 5px;
 }
 
-/* ADD NEW DREAM BUTTON */
-.newDreamBtn {
-  width: 100%;
-  background-color: rgb(23, 92, 116);
-  padding: 2% 0;
-  text-align: center;
-}
 
 /* INVITES */
 .inviteCont {
@@ -230,51 +234,6 @@ label {
 }
 
 
-/* BALANCE CONTAINER */
-#container {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  padding: 10px;
-  width: 700px;
-  height: 700px;
-  background-color: #fff;
-}
-
-
-/* TOTAL PROGRESS */
-.botBar {
-  margin: 0 !important;
-  background-image: none;
-  height: 20%;
-  width: 100%;
-  bottom: 0;
-  position: absolute;
-}
-
-.circularProgressbar {
-  position: relative;
-  margin: auto;
-  height: 50%;
-  width: 40%;
-  margin-bottom: 2.5rem;
-  margin-left: 1.5rem;
-  text-align:center;
-
-}
-
-.rechartBar {
-  height: 50%;
-  width: 10%;
-  position: absolute;
-  margin-bottom: 0.5rem;
-  margin-left: 0.2rem;
-}
-
-.balance{
-  height: 50%;
-  width: 50%;
-}
 
 .close {
   width: 25px;
