--- a/server/public/main.css
+++ b/server/public/main.css
@@ -15,8 +15,20 @@ h1 {
   margin: 0 !important;
   width: 100%;
   height: 5%;
-  border: 1px solid black;
-  background-color: rgb(49, 40, 104)
+  background-color: transparent;
+}
+
+.navbar img{
+  width: 50%;
+}
+
+.navbar .avatar{
+  text-align: right;
+}
+
+.avatarImg{
+  border-radius: 10px;
+  margin-right: 0;
 }
 
 ::placeholder {
@@ -36,7 +48,6 @@ h1 {
   height: 20%;
   width: 100%;
   bottom: 0;
-  position: fixed;
 }
 /* BALANCE CONTAINER */
 #container {
@@ -70,11 +81,7 @@ h1 {
 }
 
 /* DASHBOARD */
-.dashCont {
-  position: absolute;
-  height: 91.1%;
-  background: url('/images/dashBoard.png')
-}
+
 
 /* CLOUD VIEW */
 
@@ -90,6 +97,10 @@ h1 {
 
 
 /* CLOUD */
+
+.appContainer{
+  
+}
 
 .cloud {
   position: relative;
