--- a/server/public/main.css
+++ b/server/public/main.css
@@ -268,6 +268,29 @@ input{
   display: block;
 }
 
+.dreamCreation{
+  padding: 2em;
+}
+
+#dreamName {
+  width: 100%;
+  margin-top: 4em;
+}
+
+.dreamCreation input[type=radio] {
+  margin-top: 2em;
+  text-align: center;
+  width: 20px;
+  height: 20px;
+  display: block;
+}
+
+.dreamCreation label{
+  color: #fff;
+  text-align: center;
+  display: block;
+}
+
 .button{
   background-color: #eb088a;
   color: #fff;
