--- a/server/public/main.css
+++ b/server/public/main.css
@@ -202,7 +202,10 @@ img.progressplaceholder{
   max-width: 100%;
   bottom: fixed;
   object-position: center;
-  
+  display: block;
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
 }
 
 /* LOGIN */
@@ -331,7 +334,6 @@ input{
   color: #fff;
   border: none;
   font-weight: bold;
-  width: 100px;
   margin: 10px 4px 10px 4px;
   text-align: center;
 }
