--- a/server/public/main.css
+++ b/server/public/main.css
@@ -31,6 +31,12 @@ h3 {
   font-style: italic;
 }
 
+h4 {
+  font-size: 1.3rem;
+  color: #fff;
+  position: center;
+}
+
 
 /* NAV BAR */
 .navbar {
